--- a/index.html
+++ b/index.html
@@ -71,58 +71,7 @@
 <pre><span class="kd">var</span> <span class="nx">ApiServer</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'apiserver'</span><span class="p">)</span>
 </pre>
 </div>
-
-
-<h2>Table Of Contents</h2>
-
-<ul>
-<li>
-<a href="#class-method-constructor">Methods</a>
-
-<ul>
-<li><a href="#class-method-constructor">#()</a></li>
-<li><a href="#class-method-addmodule">#addModule(version, moduleName, apiModule)</a></li>
-<li><a href="#class-method-use">#use(route, middleware)</a></li>
-<li><a href="#class-method-listen">#listen([port], [callback])</a></li>
-<li><a href="#class-method-close">#close([callback])</a></li>
-</ul>
-</li>
-<li>
-<a href="#modules">Modules</a>
-
-<ul>
-<li><a href="#modules-interface">Interface</a></li>
-<li><a href="#modules-examples">Examples</a></li>
-</ul>
-</li>
-<li>
-<a href="#middleware">Middleware</a>
-
-<ul>
-<li><a href="#middleware-interface">Interface</a></li>
-<li><a href="#transports">Transports</a></li>
-</ul>
-</li>
-<li>
-<a href="#router">Router</a>
-
-<ul>
-<li><a href="#router-interface">Interface</a></li>
-</ul>
-</li>
-<li>
-<a href="#bundled-middleware">Bundled Middleware</a>
-
-<ul>
-<li><a href="#jsontransport">JSONTransport</a></li>
-<li><a href="#httpauth">httpAuth</a></li>
-<li><a href="#mutipartparser">mutipartParser</a></li>
-<li><a href="#payloadparser">payloadParser</a></li>
-</ul>
-</li>
-<li><a href="#how-to-contribute">How to contribute</a></li>
-<li><a href="#license">License</a></li>
-</ul><h1>Class Methods</h1>
+<h1>Class Methods</h1>
 
 <h2>Class Method: constructor</h2>
 
